0_Intern_project/jitfailure-dolfin_expression_51089b27f497152bf3e7173d639d228a/error.log
/tmp/tmpo1m3rm4e/dolfin_expression_51089b27f497152bf3e7173d639d228a.cpp: In member function ‘virtual void dolfin::dolfin_expression_51089b27f497152bf3e7173d639d228a::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpo1m3rm4e/dolfin_expression_51089b27f497152bf3e7173d639d228a.cpp:61:24: error: ‘Z’ was not declared in this scope
           values[0] = -Z/r;
                        ^
/tmp/tmpo1m3rm4e/dolfin_expression_51089b27f497152bf3e7173d639d228a.cpp:61:26: error: ‘r’ was not declared in this scope
           values[0] = -Z/r;
                          ^
